changes made inside binder

--- a/welcome.ipynb
+++ b/welcome.ipynb
@@ -1,7 +1,7 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
+   "cell_type": "raw",
    "metadata": {},
    "source": [
     "# Welcome to Binder\n",
@@ -63,7 +63,7 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "RAW CELL\n",
+    "RAW CELL - it can be typed on. Nice.\n",
     "\n",
     "This Cell is a 'Raw' Cell - it's just boring text."
    ]
@@ -73,14 +73,19 @@
    "metadata": {},
    "source": [
     "#### Executing Cells\n",
+    "\\# *the number of hashes determines the font size of the heading - the level, if you will*\n",
+    " \n",
+    "Both *markdown* and *code* cells can be executed\n",
     "\n",
-    "Both *markdown* and *code* cells can be excuted,\n",
-    "\n",
-    "Excuting a *markdown* causes the *formatted* version of the cell to be displayed.  Excuting a *code* cell causes the code to run and any results are displayed below the cell.\n",
+    "\\# italics is gotten with a \\* symbol\n",
+    " \n",
+    "Executing a *markdown* causes the *formatted* version of the cell to be displayed.  Executing a *code* cell causes the code to run and any results are displayed below the cell.\n",
     "\n",
     "Any cell can be executed by pressing the play icon at the top of the document while the cell is highlighted.\n",
     "\n",
     "You can also press **CTL-ENTER** to excute the active cell.\n",
+    "\n",
+    "\\# \\*\\* creates bold text\n",
     "\n",
     "Go ahead and make some more changes to the cells above and execute them - what happens when you execute a *Raw* cell ?"
    ]
@@ -91,7 +96,9 @@
    "source": [
     "#### Adding a Removing Cells\n",
     "\n",
-    "You can use the `+` (plus icon) at the top of the docuement to add a new cell, and the cell type drop down the change the type.\n",
+    "You can use the `+` (plus icon) at the top of the document to add a new cell, and the cell type drop down the change the type.\n",
+    "\n",
+    "\\# single slanty quotes \\`foo\\` (found on the top left of the keyboard) format the plus icon\n",
     "\n",
     "You can also use the A key to add cell *above* the current cell and the B key to add *below* the current cell.\n",
     "\n",
@@ -106,6 +113,8 @@
     "\n",
     "\n",
     "see if you can delete this cell - tip, checkout the *Edit* menu ... or even try right-click\n",
+    "\n",
+    "deleting cells can be done with D, D\n",
     "\n"
    ]
   },
@@ -130,7 +139,7 @@
     {
      "data": {
       "text/plain": [
-       "10"
+       "23"
       ]
      },
      "execution_count": 1,
@@ -139,7 +148,9 @@
     }
    ],
    "source": [
-    "1 + 2 + 3 + 4"
+    "1 + 2 + 3 + 17\n",
+    "\n",
+    "# make sure you've set the kernel (top right) to be running, or else it won't compute properly"
    ]
   },
   {
