--- a/welcome.ipynb
+++ b/welcome.ipynb
@@ -189,6 +189,8 @@
     "\n",
     "- at the same terminal prompt type: `git commit -m \"changes made inside binder\"`\n",
     "\n",
+    "`-m` is for message\n",
+    "\n",
     "at this point git has added an additional version of your files to your repository inside your curren Binder environment.  However, your repository on GitHub remains unchanges (you might like to go check).\n",
     "\n",
     "#### Tell Git to push the new commit (version) to GitHub\n",
