wednesday morning session end

--- a/lessons/python/ep1-introduction.ipynb
+++ b/lessons/python/ep1-introduction.ipynb
@@ -1324,7 +1324,7 @@
     "print(numpy.mean(data,axis=0).shape) # this is like piping stuff. it takes the output of numpy.mean, calculates its shape, and then prints it\n",
     "# 40 days (columns in data)\n",
     "# 60 patients (rows in data)\n",
-    "print(numpy.mean(data,axis=0))\n",
+    "print(numpy.mean(data,axis=0)) # operates across the rows. will sum all columns for each row\n",
     "# average each day. I think"
    ]
   },
@@ -1360,7 +1360,7 @@
    "source": [
     "print(numpy.mean(data,axis=1).shape) # this is like piping stuff. it takes the output of numpy.mean, calculates its shape, and then prints it\n",
     "# 60 elements - the average inflammation of each patient\n",
-    "print(numpy.mean(data,axis=1))"
+    "print(numpy.mean(data,axis=1)) # operates across the colums. will sum all rows for each column"
    ]
   },
   {
