thursday morning session 1

--- a/lessons/python/ep2-loops.ipynb
+++ b/lessons/python/ep2-loops.ipynb
@@ -58,10 +58,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "l\n",
+      "e\n",
+      "a\n",
+      "d\n"
+     ]
+    }
+   ],
+   "source": [
+    "word = 'lead'\n",
+    "print(word[0])\n",
+    "print(word[1])\n",
+    "print(word[2])\n",
+    "print(word[3])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -86,9 +103,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "t\n",
+      "i\n",
+      "n\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "string index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-36-e59d5eac5430>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mword\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mword\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mword\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m: string index out of range"
+     ]
+    }
+   ],
    "source": [
     "word = 'tin'\n",
     "print(word[0])\n",
@@ -111,10 +149,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'str'>\n",
+      "<class 'str'>\n",
+      "l\n",
+      "e\n",
+      "a\n",
+      "d\n",
+      "l\n",
+      "e\n",
+      "a\n",
+      "d\n"
+     ]
+    }
+   ],
+   "source": [
+    "word = 'lead'\n",
+    "\n",
+    "print(type(word))\n",
+    "print(type(word[0]))\n",
+    "\n",
+    "for char in word:\n",
+    "    print(char) # there's nothing special about \"char\" - it's just a placeholder. it's like \"for i in [object]\":\n",
+    "\n",
+    "for i in word:\n",
+    "    print(i)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -132,10 +198,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "o\n",
+      "x\n",
+      "y\n",
+      "g\n",
+      "e\n",
+      "n\n"
+     ]
+    }
+   ],
+   "source": [
+    "word = 'oxygen'\n",
+    "for char in word: # colon, not curly brackets! :(\n",
+    "    print(char) # remember, it's four spaces here - not a tab! >:("
+   ]
   },
   {
    "cell_type": "markdown",
@@ -163,15 +246,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "o\n",
+      "o\n",
+      "x\n",
+      "x\n",
+      "y\n",
+      "y\n",
+      "g\n",
+      "g\n",
+      "e\n",
+      "e\n",
+      "n\n",
+      "n\n",
+      "oxygen\n",
+      "variant 2:\n",
+      "o\n",
+      "o\n",
+      "oxygen\n",
+      "x\n",
+      "x\n",
+      "oxygen\n",
+      "y\n",
+      "y\n",
+      "oxygen\n",
+      "g\n",
+      "g\n",
+      "oxygen\n",
+      "e\n",
+      "e\n",
+      "oxygen\n",
+      "n\n",
+      "n\n",
+      "oxygen\n"
+     ]
+    }
+   ],
    "source": [
     "word = 'oxygen'\n",
     "for char in word:\n",
     "    print(char)\n",
     "    print(char)\n",
-    "print(word)"
+    "print(word)\n",
+    "\n",
+    "# if the last line were part of the loop it'd look like:\n",
+    "print('variant 2:')\n",
+    "for char in word:\n",
+    "    print(char)\n",
+    "    print(char)\n",
+    "    print(word)"
    ]
   },
   {
@@ -190,10 +319,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "o\n",
+      "x\n",
+      "y\n",
+      "g\n",
+      "e\n",
+      "n\n"
+     ]
+    }
+   ],
+   "source": [
+    "word = 'oxygen'\n",
+    "for banana in word:\n",
+    "    print(banana)\n",
+    "    \n",
+    "# i did this already with a less silly example..."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -210,10 +358,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "there are 5 vowels\n"
+     ]
+    }
+   ],
+   "source": [
+    "length = 0\n",
+    "for vowel in 'aeiou':\n",
+    "    length = length + 1\n",
+    "\n",
+    "print('there are',length,'vowels')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -240,10 +402,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "before the loop, letter = z\n",
+      "a\n",
+      "b\n",
+      "c\n",
+      "after the loop, letter = c\n"
+     ]
+    }
+   ],
+   "source": [
+    "letter = 'z'\n",
+    "print('before the loop, letter =', letter)\n",
+    "for letter in 'abc':\n",
+    "    print(letter)\n",
+    "\n",
+    "print('after the loop, letter =', letter)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -260,10 +441,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len('aeiou'))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -279,10 +470,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "range(0, 5)\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "range(2, 5)\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "range(3, 10, 2)\n",
+      "3\n",
+      "5\n",
+      "7\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "#help(range)\n",
+    "# NOTE: range returns the range only. need to iterate over the loop to get it to return the individual elementdd\n",
+    "print(range(5))\n",
+    "for i in range(5):\n",
+    "    print(i) # should return 0, 1, 2, 3, 4\n",
+    "    \n",
+    "print(range(2,5)) # should return 2, 3, 4\n",
+    "for i in range(2,5):\n",
+    "    print(i)\n",
+    "\n",
+    "print(range(3,10,2))\n",
+    "for i in range(3,10,2): \n",
+    "    print(i)\n",
+    "\n",
+    "# should return 3, 5, 7, 9"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -308,10 +537,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,4):\n",
+    "    print(i)\n",
+    "\n",
+    "# see above for more examples"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -331,10 +575,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "letter 1 is o\n",
+      "letter 2 is x\n",
+      "letter 3 is y\n",
+      "letter 4 is g\n",
+      "letter 5 is e\n",
+      "letter 6 is n\n"
+     ]
+    }
+   ],
+   "source": [
+    "#6 times, right? once ofr each letter\n",
+    "length = 0\n",
+    "word = 'oxygen'\n",
+    "#len(word)\n",
+    "for i in word:\n",
+    "    length = length + 1\n",
+    "    print('letter',length,'is',i)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -353,10 +618,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "25\n",
+      "125\n",
+      "625\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(5**2)\n",
+    "print(5**3)\n",
+    "print(5**4)\n",
+    "\n",
+    "# ** is just \"to the power of\""
+   ]
   },
   {
    "cell_type": "markdown",
@@ -372,10 +653,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "N\n",
+      "eN\n",
+      "weN\n",
+      "tweN\n",
+      "otweN\n",
+      "notweN\n"
+     ]
+    }
+   ],
+   "source": [
+    "string1 = 'Newton'\n",
+    "new_word = ''\n",
+    "#for i in range(5,-1,-1):\n",
+    "#    new_word = new_word + string1[i]    \n",
+    "#    print(new_word)\n",
+    "    \n",
+    "string2 = ''\n",
+    "for char in string1:\n",
+    "    string2 = char + string2\n",
+    "    print(string2)\n",
+    "    \n",
+    "# derp! don't need to count backwards. just append them to the front rather than the back of the string"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -392,10 +699,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<enumerate object at 0x7fc80c5b3048>\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i, j in enumerate([2.22,4.44,3.33]):\n",
+    "    print('i =',i, 'j =',j) # i is the index number, j is the corresponding value"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -423,10 +741,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 85,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "97\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 5\n",
+    "coef = [2, 4, 3]\n",
+    "y = coef[0] * x**0 + coef[1] * x**1 + coef[2] * x**2\n",
+    "print(y)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -437,14 +768,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i = 0 c = 2\n",
+      "i = 1 c = 4\n",
+      "i = 2 c = 3\n",
+      "97\n"
+     ]
+    }
+   ],
    "source": [
     "y = 0\n",
-    "coefficient = [2, 4, 3]\n",
-    "for i, c in enumerate(cc):\n",
-    "    y = # magic required here \n",
+    "coefficients = [2, 4, 3] # 2 + 4x + 3x^2, etc\n",
+    "for i, c in enumerate(coefficients):\n",
+    "    print('i =',i,'c =',c)\n",
+    "    y = y + c * x**i\n",
     "print(y)"
    ]
   },
