thursday morning sesssion 2

--- a/lessons/python/ep3-lists.ipynb
+++ b/lessons/python/ep3-lists.ipynb
@@ -39,10 +39,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "odds are: [1, 3, 5, 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "odds = [1, 3, 5, 7]\n",
+    "print('odds are:',odds)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -58,10 +69,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1st element: 1\n",
+      "2nd element: 3\n",
+      "last element: 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('1st element:', odds[0])\n",
+    "print('2nd element:', odds[1])\n",
+    "print('last element:',odds[-1]) # the last element"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -79,10 +104,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "3\n",
+      "5\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "for number in odds:\n",
+    "    print(number)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -99,10 +138,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "names are originally: ['Curie', 'Darwing', 'Turing']\n",
+      "edited names are: ['Curie', 'Darwin', 'Turing']\n"
+     ]
+    }
+   ],
+   "source": [
+    "names = ['Curie', 'Darwing', 'Turing']\n",
+    "print('names are originally:', names)\n",
+    "names[1] = 'Darwin'\n",
+    "print('edited names are:', names)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -133,10 +186,10 @@
     "\n",
     "Lists and arrays, on the other hand, are mutable: we can modify them after they have been created. We can change individual elements, append new elements, or reorder the whole list. For some operations, like sorting, we can choose whether to use a function that modifies the data in-place or a function that returns a modified copy and leaves the original unchanged.\n",
     "\n",
-    "Be careful when modifying data in-place. If two variables refer to the same list, and you modify the list value, it will change for both variables!\n",
+    "Be careful when modifying data in-place. **If two variables refer to the same list, and you modify the list value, it will change for both variables!** This is different to R, wheere it makes a copy of the object\n",
     "```\n",
     "salsa = ['peppers', 'onions', 'cilantro', 'tomatoes']\n",
-    "my_salsa = salsa        # <-- my_salsa and salsa point to the *same* list data in memory\n",
+    "my_salsa = salsa        **# <-- my_salsa and salsa point to the *same* list data in memory** \n",
     "salsa[0] = 'hot peppers'\n",
     "print('Ingredients in salsa:', salsa)\n",
     "print('Ingredients in my salsa:', my_salsa)\n",
@@ -181,10 +234,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "shop = [['pepper','zucchini','onion'],\n",
+    "       ['cabbage','lettuce','garlic'],\n",
+    "       ['apple', 'pear', 'banana']]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -200,10 +257,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['pepper', 'zucchini', 'onion']\n",
+      "pepper\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(shop[0])\n",
+    "print(shop[0][0])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -215,15 +284,25 @@
     "print(shop[1][2])\n",
     "```\n",
     "\n",
-    "don't foget the zero index thing ..."
+    "don't forget the zero index thing ..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "garlic\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(shop[1][2])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -238,10 +317,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 12.5, 'Unknown']\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_ages = [10, 12.5, 'Unknown']\n",
+    "print(sample_ages)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -262,10 +352,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 3, 5, 7]\n",
+      "odds after appending 11: [1, 3, 5, 7, 11]\n",
+      "odds after removing first element: [3, 5, 7, 11]\n",
+      "the list of odds, but backwards: [11, 7, 5, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(odds)\n",
+    "odds.append(11)\n",
+    "print('odds after appending 11:',odds)\n",
+    "\n",
+    "del odds[0]\n",
+    "print('odds after removing first element:', odds)\n",
+    "\n",
+    "odds.reverse()\n",
+    "print('the list of odds, but backwards:', odds)\n",
+    "\n",
+    "# this edits the list without needing to reassign it to itself, unlike in R"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -287,10 +400,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "primes: [1, 3, 5, 7, 2]\n",
+      "odds: [1, 3, 5, 7, 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "odds = [1,3,5,7]\n",
+    "primes = odds\n",
+    "primes.append(2)\n",
+    "print('primes:',primes)\n",
+    "print('odds:',odds)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -310,10 +438,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "primes: [1, 3, 5, 7, 2]\n",
+      "odds: [1, 3, 5, 7]\n"
+     ]
+    }
+   ],
+   "source": [
+    "odds = [1,3,5,7]\n",
+    "primes = list(odds)\n",
+    "primes.append(2)\n",
+    "print('primes:',primes)\n",
+    "print('odds:',odds)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -329,10 +472,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "h\n",
+      "['h']\n",
+      "e\n",
+      "['h', 'e']\n",
+      "l\n",
+      "['h', 'e', 'l']\n",
+      "l\n",
+      "['h', 'e', 'l', 'l']\n",
+      "o\n",
+      "['h', 'e', 'l', 'l', 'o']\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list = [] # makes an empty list\n",
+    "\n",
+    "for i in 'hello':\n",
+    "    print(i)\n",
+    "    my_list.append(i) # don't need the my_list = bit, remember! python is differernt to R\n",
+    "\n",
+    "    print(my_list)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -358,10 +526,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "group: Drosophila\n",
+      "species: melanogaster\n",
+      "autosomes: ['2', '3', '4']\n",
+      "last: 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "binomial_name = \"Drosophila melanogaster\"\n",
+    "group = binomial_name[0:10] # gets the genus name\n",
+    "print(\"group:\", group) # prints the genus name\n",
+    "\n",
+    "species = binomial_name[11:24] # gets the species name\n",
+    "print(\"species:\", species) # prints the species name\n",
+    "\n",
+    "chromosomes = [\"X\", \"Y\", \"2\", \"3\", \"4\"]\n",
+    "autosomes = chromosomes[2:5]\n",
+    "print(\"autosomes:\", autosomes)\n",
+    "\n",
+    "last = chromosomes[-1]\n",
+    "print(\"last:\", last)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -384,10 +577,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2013\n",
+      "[['chlorine', 'Cl'], ['bromine', 'Br'], ['iodine', 'I'], ['astatine', 'At']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "string_for_slicing = \"observation date: 02-Feb-2013\"\n",
+    "last4_char = string_for_slicing[-4:] # 4th from end until the end of string\n",
+    "print(last4)\n",
+    "\n",
+    "list_for_slicing = [[\"fluorine\", \"F\"],\n",
+    "                    [\"chlorine\", \"Cl\"],\n",
+    "                    [\"bromine\", \"Br\"],\n",
+    "                    [\"iodine\", \"I\"],\n",
+    "                    [\"astatine\", \"At\"]]\n",
+    "\n",
+    "last4_entries = list_for_slicing[-4:]\n",
+    "print(last4_entries)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -398,7 +613,7 @@
     "\n",
     "You can achieve this by providing a third argument to the range within the brackets, called the step size. The example below shows how you can take every third entry in a list:\n",
     "```\n",
-    "primes = [2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37]\n",
+    "primes = [2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41]\n",
     "subset = primes[0:12:3]\n",
     "print(\"subset\", subset)\n",
     "```"
@@ -406,10 +621,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2, 7, 17, 29]\n"
+     ]
+    }
+   ],
+   "source": [
+    "primes = [2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41]\n",
+    "subset = primes[0:12:3] # from index 1 to index 11, every third one\n",
+    "print(subset) # 41 is excluded because it's element 12, which isn't counted in Python"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -425,10 +652,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, 13, 23, 37]\n"
+     ]
+    }
+   ],
+   "source": [
+    "primes = [2, 3, 5, 7, 11, 13, 17, 19, 23, 29, 31, 37, 41]\n",
+    "subset = primes[2:12:3] # from index 1 to index 11, every third one\n",
+    "print(subset)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -448,10 +687,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I notpssgre ntesae\n"
+     ]
+    }
+   ],
+   "source": [
+    "beatles = \"In an octopus's garden in the shade\"\n",
+    "subset_beatles = beatles[0::2] # from 0, to thee end, every 2nd character\n",
+    "print(subset_beatles)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -469,10 +720,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Using 0 to begin range: Monday\n",
+      "Omitting beginning index: Monday\n"
+     ]
+    }
+   ],
+   "source": [
+    "date = \"Monday 4 January 2016\"\n",
+    "day = date[0:6]\n",
+    "print(\"Using 0 to begin range:\", day)\n",
+    "day = date[:6]\n",
+    "print(\"Omitting beginning index:\", day)\n",
+    "\n",
+    "# if you're goingg from the start, you don't need the 0 at the beginning"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -492,10 +760,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "With specifed start and end position: ['sep', 'oct', 'nov', 'dec']\n",
+      "Using len() to get last entry: ['sep', 'oct', 'nov', 'dec']\n",
+      "Omitting ending index: ['sep', 'oct', 'nov', 'dec']\n"
+     ]
+    }
+   ],
+   "source": [
+    "months = [\"jan\", \"feb\", \"mar\", \"apr\", \"may\", \"jun\", \"jul\", \"aug\", \"sep\", \"oct\", \"nov\", \"dec\"]\n",
+    "q4 = months[8:12] # gets me september onward\n",
+    "print(\"With specifed start and end position:\", q4)\n",
+    "q4 = months[8:len(months)] \n",
+    "print(\"Using len() to get last entry:\", q4)\n",
+    "q4 = months[8:]\n",
+    "print(\"Omitting ending index:\", q4)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -514,10 +800,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "repeats: [2, 4, 6, 8, 10, 2, 4, 6, 8, 10]\n",
+      "repeats with numpy array [ 4  8 12 16 20]\n",
+      "list: [2, 4, 6, 8, 10]\n",
+      "numpy array: [ 2  4  6  8 10]\n",
+      "updated list: [5, 4, 6, 8, 10]\n",
+      "numpy array doesn't also update: [ 2  4  6  8 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "counts = [2, 4, 6, 8, 10] # square brackets is a list\n",
+    "repeats = counts * 2 # prints counts twice\n",
+    "print('repeats:',repeats)\n",
+    "\n",
+    "import numpy\n",
+    "\n",
+    "counts2 = numpy.asarray(counts) # this copies it over rather than accessing the same thing under 2 names\n",
+    "# this means that changes in counts aren't applied to counts2\n",
+    "repeats2 = counts2 * 2\n",
+    "\n",
+    "print('repeats with numpy array',repeats2)\n",
+    "\n",
+    "print('list:',counts)\n",
+    "print('numpy array:', counts2)\n",
+    "counts[0] = 5\n",
+    "print('updated list:', counts)\n",
+    "print('numpy array doesn\\'t also update:',counts2)\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -536,10 +854,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([1., 2., 3., 4., 5.])"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# counts/2 throws a wobbly\n",
+    "counts2/2 # will do it, because it's now a numpy array"
+   ]
   },
   {
    "cell_type": "markdown",
